# fsm-variant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  conanfile.py
example/: CMakeLists.txt
example/connection_fsm/: CMakeLists.txt  connection_fsm.h  connection_fsm_tests.cpp
example/tcp_fsm/: CMakeLists.txt  tcp_fsm.h  tcp_fsm_tests.cpp
examples/: CMakeLists.txt  connection_fsm.cpp
src/: CMakeLists.txt
src/include/mp/: fsm.h
test_package/: CMakeLists.txt  conanfile.py  sample.cpp
